<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="354dp"
        android:layout_height="112dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="16dp"
        android:rotation="15"
        android:rotationX="10"
        android:text="@string/the_quizz"
        android:textAlignment="center"
        android:textColor="#0090FF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#CEFF00"
        android:fontFamily="@font/roboto"
        android:text="@string/play"
        android:textColor="@color/black"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_questions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_questions"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:backgroundTint="#CEFF00"
        android:fontFamily="@font/roboto"
        android:text="@string/questions"
        android:textColor="@color/black"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>